admin create/details forms for similar positions

--- a/Admin/Pages/Index.cshtml
+++ b/Admin/Pages/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Certificates</h5>
-                    <p class="card-text">Click here to create, view or edit certificates and certificate descriptions.</p>
+                    <p class="card-text">Click here to create, view or edit certificates or certificate descriptions.</p>
                     <a href="./Certificates" class="btn btn-primary">Edit</a>
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Competencies</h5>
-                    <p class="card-text">Click here to create, view or edit competencies and competency level descriptions.</p>
+                    <p class="card-text">Click here to create, view or edit competencies and competency level definitions.</p>
                     <a href="./Competencies" class="btn btn-primary">Edit</a>
                 </div>
             </div>
