--- a/Admin/Pages/Similar/Edit.cshtml
+++ b/Admin/Pages/Similar/Edit.cshtml
@@ -575,7 +575,7 @@ else if (Model.PercentSelection == "70")
                                     &nbsp;&nbsp;&nbsp;90%&nbsp;&nbsp;&nbsp;
                                 </button>
                                 <button class="btn btn-primary" asp-page-handler="selecteightypercent" asp-all-route-data="routedataadd">
-                                    &nbsp;&nbsp;&nbsp;80$&nbsp;&nbsp;&nbsp;
+                                    &nbsp;&nbsp;&nbsp;80%&nbsp;&nbsp;&nbsp;
                                 </button>
                                 <button class="btn btn-info" asp-page-handler="selectseventypercent" asp-all-route-data="routedataadd">
                                     &nbsp;&nbsp;&nbsp;70%&nbsp;&nbsp;&nbsp;
