Faq & contact pages and menu with 2 new photos

--- a/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
@@ -13,9 +13,9 @@
                 </ul>
                 <div class="row">
                     <section class="col-sm-3">
-                        <h3><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" alt="Link to contact the CCG" target="_blank">Contact us</a></h3>
+                        <h3><a href="/en/Contact" alt="Link to contact the CCG">Contact us</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new" alt="Link to send us your questions or comments" target="_blank">Questions or comments?</a></li>
+                            <li><a href="/en/Contact" alt="Link to send us your questions or comments">Questions or comments?</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
@@ -74,9 +74,9 @@ else
                 </ul>
                 <div class="row">
                     <section class="col-sm-3">
-                        <h3><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" alt="Lien pour contacter la CCG" target="_blank">Contactez-nous</a></h3>
+                        <h3><a href="/fr/Contact" alt="Lien pour contacter la CCG">Contactez-nous</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new" alt="Lien pour nous envoyer vos questions ou commentaires" target="_blank">Questions ou commentaires?</a></li>
+                            <li><a href="/fr/Contact" alt="Lien pour nous envoyer vos questions ou commentaires">Questions ou commentaires?</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
