--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -6,16 +6,16 @@
     var matchingcompetencies = false;
     var differingcompetencies = false;
 }
-    <section role="contentinfo">
+<section role="contentinfo">
 
-        <div class="mrgn-tp-md">
-            <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("Delta","ToPdf", new { id = Model.CurrentPosition.JobTitleId, obj = Model.ObjectivePosition.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["Save PDF"]"></span> </a>
-            <nav role="navigation">
-                <h2 class="wb-inv">Document navigation</h2>
-                <ul class="pager">
-                    @{
-                        var routedata = new Dictionary<string, string>
-                                {
+    <div class="mrgn-tp-md">
+        <a title="@Localizer["Save PDF"]" target="_blank" href="@Url.Action("Delta","ToPdf", new { id = Model.CurrentPosition.JobTitleId, obj = Model.ObjectivePosition.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["Save PDF"]"></span> </a>
+        <nav role="navigation">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                @{
+                    var routedata = new Dictionary<string, string>
+                                                {
                         {"positionid",  Model.PositionId.ToString()},
                         {"objectiveid",  Model.ObjectiveId.ToString() },
                         {"id",  Model.Id},
@@ -39,14 +39,23 @@
                         {"previouspagedetails", Model.PreviousPageDetails },
                         {"previouspage", Model.PreviousPage}
                     };
-                    }
-                    <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPageDelta" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
-                </ul>
-            </nav>
-        </div>
-
+                }
+                <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPageDelta" asp-all-route-data="routedata">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
+    </div>
+    @if (Model.CurrentPosition.JobTitleEng.Contains("Commanding") || Model.ObjectivePosition.JobTitleEng.Contains("Commanding"))
+        {
+            <div class="col-md-offset-2 col-md-8 mrgn-bttm-md" style="background-color: #f2f2f2; padding-top: 10px; padding-bottom: 25px;">
+                <div class="text-center">
+                    <h4>@Localizer["Commanding Officer"]</h4>
+                    <p>@Localizer["MAOtext"]</p>
+                </div>
+            </div>
+        }
+    <div class="clearfix"></div>
         <h2><b>@Localizer["h2Results"]</b></h2>
-       
+
         <table class="table table-bordered table-responsive" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tbody>
                 <tr>
